# RustBlogCMS

./: .editorconfig  .env.docker.example  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  UPGRADE.md  docker-compose.yml  index.html  package-lock.json  package.json  package.json.docs.md  start-docker.sh  tailwind.config.js  vite.config.js
backend/: Cargo.toml  Cargo.toml.docs.md  DOCKER_BUILD_FIX.md  Dockerfile
backend/src/: lib.rs  main.rs
backend/src/db/: migrations.rs  mod.rs  pool.rs  seed.rs
backend/src/db/migrations/: comments.rs  maintenance.rs  site_pages.rs  tests.rs
backend/src/handlers/: auth.rs  comments.rs  common.rs  frontend_proxy.rs  mod.rs  newsletter.rs  search.rs  site_content.rs  site_posts.rs  upload.rs
backend/src/handlers/auth/: support.rs  tests.rs
backend/src/handlers/comments/: comment_models.rs  tests.rs
backend/src/handlers/site_pages/: helpers.rs  mod.rs
backend/src/handlers/tutorials/: mod.rs  validation.rs
backend/src/middleware/: auth.rs  cors.rs  mod.rs  security.rs
backend/src/models/: comment.rs  error.rs  mod.rs  site.rs  tutorial.rs  user.rs
backend/src/repositories/: app_metadata.rs  comments.rs  common.rs  content.rs  mod.rs  newsletter.rs  pages.rs  posts.rs  token_blacklist.rs  tutorials.rs  users.rs
backend/src/routes/: admin.rs  api.rs  auth.rs  mod.rs
backend/src/security/: auth.rs  csrf.rs  mod.rs
backend/src/security/auth/: cookies.rs  tests.rs
backend/src/security/csrf/: cookies.rs  (+2 more)
backend/tests/: api_integration_tests.rs  auth_cookie_tests.rs  auth_middleware_tests.rs  auth_token_tests.rs  bug_fixes.rs  comment_model_tests.rs  csrf_enforcement_tests.rs  csrf_token_tests.rs  error_response_tests.rs  navigation_model_tests.rs  search_tests.rs  security_entropy_tests.rs  site_content_model_tests.rs  site_model_tests.rs  tutorial_model_tests.rs  upload_model_tests.rs  user_model_tests.rs
(+127 files in other folders)
