[package]
name = "rust-blog-backend"
version = "1.0.0"
edition = "2021"
rust-version = "1.82"  # Minimum Supported Rust Version
authors = ["zerox80"]
license = "MIT"
description = "High-performance Rust backend API for RustBlogCMS"
repository = "https://github.com/zerox80/LinuxTutorialCMS"
keywords = ["cms", "api", "tutorial", "axum", "education"]
categories = ["web-programming", "web-programming::http-server"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "fs"] }
tower_governor = "0.8"
governor = "0.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
jsonwebtoken = { version = "10.2", features = ["use_pem", "rust_crypto"] }
bcrypt = "0.17"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
infer = "0.19"
url = "2.5"
idna_adapter = "=1.2.1"
regex = { version = "1.10", default-features = false, features = ["std"] }
anyhow = "1.0"
time = "0.3"

sha2 = "0.10"
hmac = "0.12"
subtle = "2.5"
reqwest = { version = "0.12", features = ["json"] }
html-escape = "0.2"
rand = "0.9"

[dependencies.home]
version = "=0.5.12"

[dependencies.base64ct]
version = "=1.8.1"
default-features = false
features = ["alloc"]

[[bin]]
name = "export_content"
path = "src/bin/export_content.rs"

[[bin]]
name = "import_content"
path = "src/bin/import_content.rs"
